<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GPS Tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_10_05">10:05</string>
    <string name="_346">346</string>
    <string name="_7adf">7</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abcdefgh">abcdefgh</string>
    <string name="about">Help</string>
    <string name="about_text">This app is created by Novel Apps and Games</string>
    <string name="accept_and_allow">ACCEPT AND ALLOW</string>
    <string name="ad">Ad</string>
    <string name="address">Address</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_meter">Altitude Meter</string>
    <string name="altitude_muy">Altitude</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_measurement">Area Measurement</string>
    <string name="avg">Avg</string>
    <string name="banner_ad_id">ca-app-pub-4915953343850822/4420021851</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="clear_route">Clear Route</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="current_detector">Current Detector</string>
    <string name="current_weather">Current Weather</string>
    <string name="day_of_year">DAY OF YEAR:</string>
    <string name="default_new">Default</string>
    <string name="define_marshmallowpermissionmanager" />
    <string name="delete">delete</string>
    <string name="delete_all">Delete all %d points?</string>
    <string name="device_not_supporting">Device Not supporting</string>
    <string name="dir_read_error">Error reading directory %s</string>
    <string name="disclaimer_policy">Disclaimer</string>
    <string name="do_you_want_to_quit">Quit the application?</string>
    <string name="earthquake_detector">Earthquake Detector</string>
    <string name="emf_vector">EMF Vector (uT);</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="enter_dropoff_location">Enter Dropoff location</string>
    <string name="enter_start_location">Enter Start Location</string>
    <string name="error">Error: %s</string>
    <string name="explore_the_world_with_360">Explore The World With 360</string>
    <string name="fb_banner_ad_id">313315616151662_407016363448253</string>
    <string name="fb_interstitial_ad_id">313315616151662_407015803448309</string>
    <string name="fb_medium_rect">313315616151662_407086293441260</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="field_detctor">Field Detector</string>
    <string name="file_name">File name (optional)</string>
    <string name="file_path">File will be saved here: %s</string>
    <string name="file_saved">File saved</string>
    <string name="find_route_new">Find Route</string>
    <string name="find_transport_route">Find Transport Route</string>
    <string name="from">From:</string>
    <string name="from_dha_2_to_bahria_valley">From DHA 2 to Bahria valley</string>
    <string name="getting_string">In general, we use Session and Usage Data internally to serve our Users and enable them to take maximum advantage of the Applications, the Services and the Site. We do not store Personal Information and therefore we do not disclose your Personal Information</string>
    <string name="gps_tools">GPS Tools</string>
    <string name="gps_tools_box">GPS TOOLS BOX</string>
    <string name="heavy_traffic_new">Heavy Traffic</string>
    <string name="i_agree">I Agree</string>
    <string name="icon">icon</string>
    <string name="instructions">Move your device to detect objects</string>
    <string name="interstitial_ad_id">ca-app-pub-4915953343850822/5349960143</string>
    <string name="islamabad_blue_area">Islamabad Blue Area</string>
    <string name="latitude_latest">Latitude</string>
    <string name="library_marshmallowpermissionmanager_author">Rurio Luca</string>
    <string name="library_marshmallowpermissionmanager_authorWebsite">https://github.com/RurioLuca/MarshmallowPermissionManager</string>
    <string name="library_marshmallowpermissionmanager_classPath">permission.auron.com.marshmallowpermissionhelper</string>
    <string name="library_marshmallowpermissionmanager_isOpenSource">true</string>
    <string name="library_marshmallowpermissionmanager_libraryDescription">Helper to ask runtime permission on android marshmallow</string>
    <string name="library_marshmallowpermissionmanager_libraryName">PermissionHelper</string>
    <string name="library_marshmallowpermissionmanager_libraryVersion">1.1.6</string>
    <string name="library_marshmallowpermissionmanager_libraryWebsite">https://github.com/RurioLuca/MarshmallowPermissionManager</string>
    <string name="library_marshmallowpermissionmanager_licenseId">mit</string>
    <string name="library_marshmallowpermissionmanager_repositoryLink">https://github.com/RurioLuca/MarshmallowPermissionManager</string>
    <string name="live_street_view">Live Street View</string>
    <string name="load">Load</string>
    <string name="local_time">LOCAL TIME:</string>
    <string name="location_storage_and_record_audio">Record Audio, Location and Storage</string>
    <string name="longitude_latest">Longitude</string>
    <string name="magnetic_detec">Magnetic Field Detector</string>
    <string name="magnetic_field_value_dc_current">%1$d uT</string>
    <string name="map_type">MAP TYPE</string>
    <string name="mapview_map">Map</string>
    <string name="mapview_satellite">Satellite</string>
    <string name="mapview_terrain">Terrain</string>
    <string name="max">Max</string>
    <string name="measure_area">Area</string>
    <string name="measure_distance">Distance</string>
    <string name="measure_elevation">el</string>
    <string name="metric">Metric units</string>
    <string name="mgnetic">Magnetic</string>
    <string name="military_compass">Military Compass</string>
    <string name="min">Min</string>
    <string name="more_apps_new">More Apps</string>
    <string name="my_location">My Location</string>
    <string name="near_by_places">Near By Places</string>
    <string name="no_files_found">No files found in %s</string>
    <string name="no_location_found">No location found</string>
    <string name="no_new">No</string>
    <string name="no_wifi_location">Enable Internet Connection or GPS</string>
    <string name="normal_traffic_new">Normal traffic</string>
    <string name="object_detector">Object Detector</string>
    <string name="open_weather_maps_app_id">df3287f9428eca1ab6f9ba1bff1115c2</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="percent">%</string>
    <string name="perchase_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAkB+UomDdKdp/3E2RjkGa//1SJdEUzcAngZThb5vUunWGtcflZANdZlvd3joQOpmWSkv3H6TMdYRo/gWMD2ZLKgPNgR/JPzOCStUERC8IIVdxXqVAnsCqTnOBBvwvUuaH0dwxDsnZV4F2+bHYKPLa7UyjIH428ZDRIBTyKff2Wx3SPFZ9SFsODWWweRbN4dxE1SRc6iDXrBqJlwEhR/1PVJiAea5TzI0iovKcsLWhaf0sqDm6acwX0gHkkpkgimne4QIu7DKOQ9FDHRZRlH7QHzraCtUwIKoqjgOcwHGkZ686goPxX42hdwU+KDVGUufT/nMJYrCVtT+yeufvUrE2ZwIDAQAB</string>
    <string name="units">Units</string>
    <string name="IO">Input/Output</string>
    <string name="body_weight_setting">Body weight (kg)</string>
    <string name="calibration">Calibration</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="overall">Overall</string>
    <string name="scale_max_value">Scale MAX value</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="show_local_peaks">Show local peak frequencies</string>
    <string name="show_reference_line">Show reference line</string>
    <string name="step_length_setting">Step length (cm)</string>
</resources>