<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_icon"
    tools:context=".Activities.Compass.SimpleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_320sdp"
                android:layout_height="@dimen/_320sdp"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/compass_regular"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/_346"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/compass_box"
                android:baselineAligned="false"
                android:layout_marginTop="16dp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center">


                        <TextView
                            android:id="@+id/local"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_10sdp"
                            android:textStyle="bold"
                            android:textColor="#3a3838"
                            android:gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:text="@string/local_time"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/barlow_medium"/>

                        <TextView
                            android:textColor="#3a3838"
                            android:layout_gravity="center"
                            android:id="@+id/loc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:text="@string/abcdefgh"
                            android:layout_below="@+id/local"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/barlow_medium"/>

                        <View
                            android:id="@+id/viwLine"
                            android:background="#bab9b9"
                            android:layout_width="wrap_content"
                            android:layout_height="1dp"
                            android:layout_below="@+id/loc"/>


                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:gravity="center"
                android:background="@color/compass_box"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details">

                <TextView
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="#3a3838"
                    android:id="@+id/dmw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dmw"
                    android:fontFamily="@font/barlow_regular"/>

                <TextView
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="#3a3838"
                    android:id="@+id/txtmonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="M"
                    android:layout_toRightOf="@+id/dmw"
                    android:fontFamily="@font/barlow_regular"/>

                <TextView
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:textColor="#3a3838"
                    android:id="@+id/txtyear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="Y"
                    android:layout_toRightOf="@+id/txtmonth"
                    android:fontFamily="@font/barlow_regular"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bannerFb_compass1_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:visibility="gone"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_compass1_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_gravity="bottom|center"
        android:gravity="bottom|center"
        android:visibility="gone"
        />
</FrameLayout>