<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_icon"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_collapseMode="pin"
        app:titleTextColor="@android:color/white"
        android:background="#267FC4"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/drawer_icon_sound"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/left_arrow"/>

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sound Detector"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cons_Ad_view"
        android:layout_marginTop="55dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/bannerFb_sound_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:visibility="gone" />




    <com.github.anastr.speedviewlib.AwesomeSpeedometer
        android:id="@+id/dbValueMeter"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        app:sv_backgroundCircleColor="@android:color/transparent"
        app:sv_centerCircleColor="#000"
        app:sv_indicatorColor="@color/dark_red"
        app:sv_markColor="#000"
        app:sv_maxSpeed="120"
        app:sv_pointerColor="@color/dull_black"
        app:sv_speedTextColor="#5d5c5c"
        app:sv_speedometerColor="#000"
        app:sv_textColor="#000"
        app:sv_unitTextColor="#000"
        app:sv_unitTextSize="0dp"
        app:sv_withTremble="false"/>

 <!--   <TextView
        android:textSize="@dimen/_8ssp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_14sdp"
        android:text="db" />-->

    <TextView
        android:id="@+id/minTvR"
        android:textSize="@dimen/_14ssp"
        android:layout_below="@+id/dbValueMeter"
        android:textColor="#010101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/min" />

    <TextView android:textSize="@dimen/_15ssp"
        android:textColor="#010101"
        android:id="@+id/avgTvRR"
        android:layout_below="@+id/dbValueMeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/avg" />

    <TextView
        android:textSize="@dimen/_15ssp"
        android:textColor="#010101"
        android:id="@+id/maxTvR"
        android:layout_below="@+id/dbValueMeter"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:text="@string/max" />

    <TextView
        android:textSize="@dimen/_14ssp"
        android:textColor="#5d5c5c"
        android:id="@+id/minTv"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/minTvR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/_36sdp"
        android:text="45" />

    <TextView
        android:textSize="@dimen/_14ssp"
        android:textColor="#5d5c5c"
        android:id="@+id/avgTv"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/avgTvRR"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="67" />

    <TextView
        android:textSize="@dimen/_14ssp"
        android:textColor="#5d5c5c"
        android:id="@+id/maxTv"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/maxTvR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_42sdp"
        android:layout_alignParentEnd="true"
        android:text="89" />

    <ImageView
        android:id="@+id/graph_bg_iv"
        android:layout_width="@dimen/_265sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_below="@+id/dbValueMeter"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/sound_graph_new"
        android:layout_centerHorizontal="true"/>

    <com.gps.tools.speedometer.area.calculator.Activities.SoundDetector.GraphSingleLine
        android:id="@+id/graphMaker"
        android:layout_width="@dimen/_245sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_below="@+id/dbValueMeter"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/bannerFb_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:layout_below="@+id/graphMaker"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                >

            </LinearLayout>



    </RelativeLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_Ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
